test/functions/vass/proc-iter/error-yield-in-proc-2.good
error-yield-in-proc-2.chpl:1: In iterator 'i11i':
error-yield-in-proc-2.chpl:3: error: yield statement is not in an iterator
